test/ui/test/name-resolution/sequence-literals-unsupported.stderr
error: sequence literals are not supported yet
 --> ${TEST_FOLDER}/name-resolution/sequence-literals-unsupported.lushui:8:24
  |
8 | construct: List = List.[1 3 100 Nat32.0]
  |                        ^^^^^^^^^^^^^^^^^
  |

error: sequence literals are not supported yet
  --> ${TEST_FOLDER}/name-resolution/sequence-literals-unsupported.lushui:14:9
   |
14 |         [\x \y Text."X"] => bottom
   |         ^^^^^^^^^^^^^^^^
   |

error: aborting due to 2 previous errors

